# hugh-render

./: .travis.yml  CMakeLists.txt  README.rst
inc/hugh/render/: context.hpp  passes.hpp  stages.hpp  statistics.hpp  windows.hpp
inc/hugh/render/action/: base.hpp
inc/hugh/render/context/: base.hpp  device.hpp  swap.hpp
inc/hugh/render/interface/: activatable.hpp  applicable.hpp  executable.hpp  invalidatable.hpp  resizable.hpp
inc/hugh/render/null/: context.hpp  window.hpp
inc/hugh/render/null/action/: clear.hpp  draw.hpp  setup.hpp  swap.hpp
inc/hugh/render/null/pass/: standard.hpp
inc/hugh/render/null/shader/: compute.hpp  fragment.hpp  geometry.hpp  tessellation.hpp  vertex.hpp
inc/hugh/render/null/stage/: clear.hpp  draw.hpp  swap.hpp
inc/hugh/render/null/state/: blend.hpp  depth_stencil.hpp  raster.hpp  sampler.hpp
inc/hugh/render/pass/: base.hpp  container.hpp  null.hpp
inc/hugh/render/shader/: base.hpp
inc/hugh/render/stage/: base.hpp  null.hpp
inc/hugh/render/state/: base.hpp
inc/hugh/render/statistics/: base.hpp  cpu.hpp
inc/hugh/render/window/: base.hpp
src/lib/: CMakeLists.txt
src/lib/render/: CMakeLists.txt
src/lib/render/action/: base.cpp
src/lib/render/context/: base.cpp  device.cpp  swap.cpp
src/lib/render/interface/: activatable.cpp  applicable.cpp  executable.cpp  invalidatable.cpp  resizable.cpp
src/lib/render/null/: context.cpp  window.cpp
src/lib/render/null/action/: clear.cpp  draw.cpp  setup.cpp  swap.cpp
src/lib/render/null/pass/: standard.cpp
src/lib/render/null/shader/: compute.cpp  fragment.cpp  geometry.cpp  tessellation.cpp  vertex.cpp
src/lib/render/null/stage/: clear.cpp  draw.cpp  swap.cpp
src/lib/render/null/state/: blend.cpp  depth_stencil.cpp  raster.cpp  sampler.cpp
src/lib/render/pass/: base.cpp  container.cpp  null.cpp
src/lib/render/shader/: base.cpp
src/lib/render/stage/: base.cpp  null.cpp
src/lib/render/state/: base.cpp
src/lib/render/statistics/: base.cpp  cpu.cpp
src/lib/render/test/: CMakeLists.txt  compile.cpp  context.cpp  null_action_clear.cpp  null_action_draw.cpp  null_action_swap.cpp  null_actions.cpp  null_context.cpp  null_pass_container.cpp  null_pass_standard.cpp  null_shaders.cpp  null_stage_clear.cpp  null_stage_draw.cpp  null_stage_swap.cpp  null_state_raster.cpp  null_states.cpp  null_targets.cpp  null_window.cpp  pass_container.cpp  pass_null.cpp  stage_null.cpp  statistics_cpu.cpp  window.cpp
src/lib/render/window/: base.cpp
